   - PPDPart has been merged into PPDPart_Hash
   - PPDStack has been merged into PPDStack_Hash
   - PPDStackElement has been merged into PPDStackElement_Hash
* Collation::singleton and ::factory were deprecated, obtain an CollationFactory
  instance from MediaWikiServices instead.
* Title::getDefaultNamespace() has been deprecated to be removed because
  there are no callers/consumers.
* …

=== Other changes in 1.37 ===
* WatchlistManager::addWatch and WatchlistManager::addWatchIgnoringRights(),
  which replace User::addWatch(), now call the WatchArticle and
  WatchArticleComplete hooks.
* WatchlistManager::removeWatch and
  WatchlistManager::removeWatchIgnoringRights(), which replace
  User::removeWatch(), now call the UnwatchArticle and UnwatchArticleComplete
  hooks.
* The overridable postInitSetup() method was added to the
  AbstractAuthenticationProvider class. A provider can override postInitSetup()
  to do any custom post-initialization configuration.
* The overridable postInitSetup() method was added to the SessionProvider
  class. A provider can override postInitSetup() to do any custom
  post-initialization configuration.
* The protected getConfig() method was added to the SessionProvider class.
  Use SessionProvider::getConfig to get a config.
* The DBAccessBase class is deprecated. Classes that used to extend it
  should get a load balancer (factory) injected in the constructor instead.
* ActorNormalization::acquireActorId now requires IDatabase parameter.
  Not providing one emitted deprecation warnings since 1.36.
* Anti-lock constants ALF_PRELOAD_LINK, ALF_NO_BLOCK_LOCK, ALF_NO_LINK_LOCK
  and ALF_PRELOAD_EXISTENCE have been removed. They're unused since 1.25.
* CSS class 'mw-htmlform-field-autoinfuse' used by some forms has been
  renamed to 'mw-htmlform-autoinfuse'. (T278036)
* User::newFromRow does not accept pre-loaded user preferences under
  $data['user_properties'] anymore. This optimization was not used.