@@ -23,9 +23,9 @@ namespace MediaWiki\Linker;
 use LinkCache;
 use MediaWiki\HookContainer\HookContainer;
 use MediaWiki\SpecialPage\SpecialPageFactory;
+use MediaWiki\User\UserIdentity;
 use NamespaceInfo;
 use TitleFormatter;
-use User;
 
 /**
  * Factory to create LinkRender objects
@@ -91,14 +91,14 @@ class LinkRendererFactory {
 	}
 
 	/**
-	 * @param User $user
+	 * @deprecated since 1.37. LinkRenderer does not depend on the user any longer,
+	 * so calling ::create is sufficient.
+	 * @param UserIdentity $user
 	 * @return LinkRenderer
 	 */
-	public function createForUser( User $user ) {
-		$linkRenderer = $this->create();
-		$linkRenderer->setStubThreshold( $user->getStubThreshold() );
-
-		return $linkRenderer;
+	public function createForUser( UserIdentity $user ) {
+		wfDeprecated( __METHOD__, '1.37' );
+		return $this->create();
 	}
 
 	/**
@@ -116,12 +116,6 @@ class LinkRendererFactory {
 			$linkRenderer->setExpandURLs( PROTO_HTTP );
 		} elseif ( in_array( 'https', $options, true ) ) {
 			$linkRenderer->setExpandURLs( PROTO_HTTPS );
-		}
-
-		if ( isset( $options['stubThreshold'] ) ) {
-			$linkRenderer->setStubThreshold(
-				$options['stubThreshold']
-			);
 		}
 
 		return $linkRenderer;
