@@ -1099,9 +1099,6 @@
 	"restoreprefs": "Restore all default settings (in all sections)",
 	"prefs-editing": "Editing",
 	"searchresultshead": "Search",
-	"stub-threshold": "Threshold for stub link formatting ($1):",
-	"stub-threshold-sample-link": "sample",
-	"stub-threshold-disabled": "Disabled",
 	"recentchangesdays": "Days to show in recent changes:",
 	"recentchangesdays-max": "Maximum $1 {{PLURAL:$1|day|days}}",
 	"recentchangescount": "Number of edits to show in recent changes, page histories, and in logs, by default:",
