@@ -1325,9 +1325,6 @@
 	"restoreprefs": "Used as link text in [[Special:Preferences]]. The link points to [[Special:Preferences/reset]] which shows the \"Restore all default settings\" form.\n\nAlso used as label for the Submit button in [[Special:Preferences/reset]].",
 	"prefs-editing": "Title of a tab in [[Special:Preferences]].\nWhen changing this message, please also update {{msg-mw|vector-editwarning-warning}} which references to this message.\n{{Identical|Editing}}",
 	"searchresultshead": "Replaced by {{msg-mw|prefs-searchoptions}}, though may still be used in some extensions. DEPRECATED.\n\n{{Identical|Search}}",
-	"stub-threshold": "Used in [[Special:Preferences]], \"Advanced options\" section. The setting allows the user to select a threshold value, in bytes, from a predefined list of options. Any links that lead to pages smaller than the threshold (\"stub links\") will be styled differently.\n\nParameters:\n* $1: the text of {{msg-mw|stub-threshold-sample-link}}, styled as a stub link",
-	"stub-threshold-sample-link": "Passed as a parameter to the {{msg-mw|stub-threshold}} message.\n{{Identical|Sample}}",
-	"stub-threshold-disabled": "Used in [[Special:Preferences]].\n{{Identical|Disabled}}",
 	"recentchangesdays": "Used in [[Special:Preferences]], tab \"Recent changes\".",
 	"recentchangesdays-max": "Shown as hint in [[Special:Preferences]], tab \"Recent changes\". Parameters:\n* $1 - number of days\nSee also:\n* {{msg-mw|Prefs-watchlist-days-max}}",
 	"recentchangescount": "Used in [[Special:Preferences]], tab \"Recent changes\".",
@@ -4147,7 +4144,7 @@
 	"htmlform-required": "Used as error message in HTML forms.\n\n* {{msg-mw|Htmlform-invalid-input}}\n* {{msg-mw|Htmlform-float-invalid}}\n* {{msg-mw|Htmlform-int-invalid}}\n* {{msg-mw|Htmlform-int-toolow}}\n* {{msg-mw|Htmlform-int-toohigh}}\n* {{msg-mw|Htmlform-select-badoption}}",
 	"htmlform-submit": "{{Identical|Submit}}",
 	"htmlform-reset": "{{Identical|Undo}}",
-	"htmlform-selectorother-other": "Used in drop-down boxes in [[Special:Preferences]] as follows:\n* selection of timezone (date and time tab)\n* stub threshold (appearance tab)\n\n{{Identical|Other}}",
+	"htmlform-selectorother-other": "Used in drop-down boxes in [[Special:Preferences]] as follows:\n* selection of timezone (date and time tab)\n\n{{Identical|Other}}",
 	"htmlform-no": "Used in form, such as with radio buttons, for generic yes / no questions.\n{{Identical|No}}",
 	"htmlform-yes": "Used in form, such as with radio buttons, for generic yes / no questions.\n{{Identical|Yes}}",
 	"htmlform-chosen-placeholder": "Used as initial placeholder text in select multiple \"chosen\" input boxes",
