@@ -4,7 +4,6 @@ use MediaWiki\HookContainer\HookContainer;
 use MediaWiki\Linker\LinkRenderer;
 use MediaWiki\Linker\LinkRendererFactory;
 use MediaWiki\SpecialPage\SpecialPageFactory;
-use PHPUnit\Framework\MockObject\MockObject;
 
 /**
  * @covers MediaWiki\Linker\LinkRendererFactory
@@ -62,12 +61,7 @@ class LinkRendererFactoryTest extends MediaWikiUnitTestCase {
 				[ 'https' ],
 				'getExpandURLs',
 				PROTO_HTTPS
-			],
-			[
-				[ 'stubThreshold' => 150 ],
-				'getStubThreshold',
-				150
-			],
+			]
 		];
 	}
 
@@ -92,21 +86,5 @@ class LinkRendererFactoryTest extends MediaWikiUnitTestCase {
 			$this->specialPageFactory, $this->hookContainer
 		);
 		$this->assertInstanceOf( LinkRenderer::class, $factory->create() );
-	}
-
-	public function testCreateForUser() {
-		/** @var MockObject|User $user */
-		$user = $this->getMockBuilder( User::class )
-			->onlyMethods( [ 'getStubThreshold' ] )->getMock();
-		$user->expects( $this->once() )
-			->method( 'getStubThreshold' )
-			->willReturn( 15 );
-		$factory = new LinkRendererFactory(
-			$this->titleFormatter, $this->linkCache, $this->nsInfo,
-			$this->specialPageFactory, $this->hookContainer
-		);
-		$linkRenderer = $factory->createForUser( $user );
-		$this->assertInstanceOf( LinkRenderer::class, $linkRenderer );
-		$this->assertEquals( 15, $linkRenderer->getStubThreshold() );
 	}
 }
